# cellranger-scripts

./: .cookiecutter.json  .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.rst  LICENSE.rst  README.rst  Untitled.ipynb  Untitled1.ipynb  nohup.out  noxfile.py  pyproject.toml  ruff.toml
.github/workflows/: constraints.txt  release.yml  tests.yml
docs/: conf.py  index.rst  reference.rst  requirements.txt  usage.rst
src/cellranger_scripts/: __init__.py  __main__.py  arc.py  cli.py  enums.py  multi.py  typer_funcs.py  utils.py
src/cellranger_scripts/slurm/: header.py
tests/: __init__.py  nohup.out  test_main.py
