[tool.poetry]
name = "cellranger_scripts"
version = "0.8.3"
description = "cellranger_scripts"
authors = ["Miles Smith <miles-smith@omrf.org>"]
license = "GPL-3.0"
readme = "README.rst"
homepage = "https://github.com/milescsmith/cellranger-scripts"
repository = "https://github.com/milescsmith/cellranger-scripts"
documentation = "https://cellranger-scripts.readthedocs.io"
classifiers = [
    "Development Status :: 3 - Alpha",
]

[tool.poetry.urls]
Changelog = "https://github.com/milescsmith/cellranger-scripts/releases"

[tool.poetry.dependencies]
python = ">=3.8.3,<4.0"
click = "^8.0.1"
typer = "^0.4.1"
rich = "^12.3.0"
pandas = "^1.4.2"
numpy = "^1.22.3"
typeguard = "^2.13.3"
colorama = "^0.4.4"
structlog = "^21.5.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = {extras = ["toml"], version = "^6.1"}
safety = "^1.10.3"
mypy = "^0.910"
typeguard = "^2.13.2"
xdoctest = {extras = ["colors"], version = "^0.15.10"}
sphinx = "^4.3.0"
sphinx-autobuild = ">=2021.3.14"
pre-commit = "^2.15.0"
flake8 = "^4.0.1"
black = ">=21.10b0"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^22.4.25"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.2.3"
pep8-naming = "^0.12.1"
darglint = "^1.8.1"
reorder-python-imports = "^3.8.3"
pre-commit-hooks = "^4.0.1"
sphinx-click = "^3.0.2"
Pygments = "^2.10.0"
pyupgrade = "^2.29.1"
furo = ">=2021.11.12"
isort = "^5.10.1"
bandit = "1.7.2"
ipython = "^8.4.0"

[tool.poetry.scripts]
cellranger-scripts = "cellranger_scripts.__main__:app"
multi_config = "cellranger_scripts.multi:multi_config"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["cellranger_scripts", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
