[tool.poetry]
name = "cellranger_scripts"
version = "1.0.0"
description = "cellranger_scripts"
authors = ["Miles Smith <miles-smith@omrf.org>"]
license = "GPL-3.0"
readme = "README.rst"
homepage = "https://github.com/milescsmith/cellranger-scripts"
repository = "https://github.com/milescsmith/cellranger-scripts"
documentation = "https://cellranger-scripts.readthedocs.io"
classifiers = [
    "Development Status :: 3 - Alpha",
]

[tool.poetry.urls]
Changelog = "https://github.com/milescsmith/cellranger-scripts/releases"

[tool.poetry.dependencies]
python = ">=3.8.3,<4.0"
click = "^8.0.1"
typer = "^0.7.0"
rich = "^12.3.0"
pandas = "^1.4.2"
numpy = "^1.22.3"
typeguard = "^2.13.3"
colorama = "^0.4.4"
structlog = "^21.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"
coverage = {extras = ["toml"], version = "^6.1"}
safety = "^1.10.3"
mypy = "^0.910"
typeguard = "^2.13.2"
pre-commit = "^2.15.0"
black = ">=21.10b0"
pre-commit-hooks = "^4.0.1"
pyupgrade = "^2.29.1"
ipython = "^8.4.0"
ruff = "^0.0.253"

[tool.poetry.scripts]
cellranger-scripts = "cellranger_scripts.cli:cs"
multi_config = "cellranger_scripts.multi:multi_config"


[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["cellranger_scripts", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"